--- a/demo/src/main/resources/static/checkout.css
+++ b/demo/src/main/resources/static/checkout.css
@@ -106,58 +106,88 @@ body {
 }
 
 .payment-option {
-    border: 2px solid #e0e0e0;
-    border-radius: 8px;
-    padding: 15px 20px;
+    border: 1.5px solid #e0e0e0;
+    border-radius: 12px;
+    padding: 18px 20px;
     cursor: pointer;
     transition: all 0.2s;
     min-height: 80px;
     display: flex;
-    align-items: center;
+    align-items: baseline;
     gap: 25px;
-    justify-content: flex-start;
+    justify-content: flex-start ;
+    background-color: #fff;
 }
 
 .payment-option:hover {
-    border-color: #ccc;
+    border-color: #c8c8c8;
 }
 
 .payment-option.selected {
     border-color: #000000;
-    background-color: #f8f8f8;
-    border-width: 3px;
+    background-color: #fafafa;
+    border-width: 2.5px;
 }
 
 .payment-option.selected .payment-label span {
-    font-weight: 700;
+    font-weight: 600;
 }
 
 .payment-option input[type="radio"] {
-    width: 18px;
-    height: 18px;
-    cursor: pointer;
-    margin: 0;
+    background-color: #fff;
     flex-shrink: 0;
+    width: 14px;
+    height: 14px;
+    border: 2px solid #000;
+    border-radius: 50%;
+    cursor: pointer;
+    position: relative;
+    box-sizing: content-box;
+}
+
+.payment-option input[type="radio"]:hover {
+    border-color: #000;
+}
+
+.payment-option input[type="radio"]:checked::before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    width: 8px;
+    height: 8px;
+    background-color: #000;
+    border-radius: 50%;
 }
 
 .payment-label {
-    display: flex;
-    align-items: center; /* จัดกลางโลโก้กับข้อความในแนวตั้ง */
-    gap: 15px;
+    display: grid;
+    grid-template-columns: 70px 1fr;
+    align-items: center;
+    column-gap: 25px;
     cursor: pointer;
-    width: 100%; /* <-- ทำให้ label กินพื้นที่ที่เหลือทั้งหมด */
+    flex: 1;
 }
 
 .card-icon {
-    width: auto;
-    height: 30px;
-    max-width: 85px;
-    flex-shrink: 0;
+    height: 55px;
+    width: 55px;
+    object-fit: contain;
+    object-position: center;
+    justify-self: center;
+    align-self: center;
+}
+
+.payment-label img {
+    margin-right: 20px;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .payment-label span {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 400;
+    color: #333;
 }
 
 /* Right Column - Order Summary */
