--- a/demo/src/main/resources/static/checkout.css
+++ b/demo/src/main/resources/static/checkout.css
@@ -113,7 +113,7 @@ body {
     transition: all 0.2s;
     min-height: 80px;
     display: flex;
-    align-items: baseline;
+    align-items: center;
     gap: 25px;
     justify-content: flex-start ;
     background-color: #fff;
@@ -161,10 +161,9 @@ body {
 }
 
 .payment-label {
-    display: grid;
-    grid-template-columns: 70px 1fr;
+    display: flex;
     align-items: center;
-    column-gap: 25px;
+    gap: 20px;
     cursor: pointer;
     flex: 1;
 }
@@ -173,21 +172,24 @@ body {
     height: 55px;
     width: 55px;
     object-fit: contain;
-    object-position: center;
-    justify-self: center;
-    align-self: center;
+    display: block;
 }
 
 .payment-label img {
     margin-right: 20px;
     display: inline-block;
     vertical-align: middle;
+    margin-top: 8px;
 }
 
 .payment-label span {
     font-size: 18px;
     font-weight: 400;
     color: #333;
+    position: relative;
+    top: 8px;
+    line-height: 1;
+    margin-top: 0;
 }
 
 /* Right Column - Order Summary */
